v1.0 (versión funcional completa)